[project]
name = "era-serv"
version = "0.1.0"
description = ""
authors = [
    {name = "okw.y"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "certifi (>=2026.2.25,<2027.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "multipart (>=1.3.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
